--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <h1>חידודי מדע</h1>
-        <img src="https://github.com/RAVITAVI/MADA/blob/main/%D7%97%D7%99%D7%93%D7%94%201.png?raw=true" alt="חידה">
+        <img src="https://github.com/RAVITAVI/MADA/blob/PICP1/%D7%97%D7%99%D7%93%D7%94%201.png?raw=true?raw=true" alt="חידה">
         <div class="input-container">
             <input type="text" maxlength="6" placeholder="6 תווים">
             <input type="text" maxlength="4" placeholder="4 תווים">
