--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<a href="PicPuzz1.html" target="_blank">חידה 1</a>
+<html>
+  <body>
+     <a href="PicPuzz1.html" target="_blank">חידה 1</a> 
+  </body>
+</html>
+
+
