--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-  <body>
+  <body dir="rtl">
+    <h1>רשימת החידות</h1>
      <a href="PicPuzz1.html" target="_blank">חידה 1</a> 
   </body>
 </html>
