--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body dir="rtl">
     <h1>רשימת החידות</h1>
-    
+     <a href="PicPuzz1.html" target="_blank">חידה 1</a> 
   </body>
 </html>
 
