--- a/PicPuzz1.html
+++ b/PicPuzz1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>חידודי מדע</title>
+    <title>חידו.דוט</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,8 +70,16 @@
             margin: 15% auto;
             padding: 20px;
             border: 1px solid #888;
-            width: 80%;
-            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+            width: 400px;
+            max-width: 90%;
+            text-align: center;
+        }
+        .modal-content.youtube {
+            width: 600px;
+            max-width: 90%;
+			margin-top: 3%;
         }
         .close {
             color: #aaa;
@@ -85,12 +93,23 @@
             text-decoration: none;
             cursor: pointer;
         }
+        #modalText {
+            font-size: 24px;
+            font-weight: bold;
+            color: red;
+            margin-bottom: 20px;
+        }
+        #videoContainer iframe {
+            width: 100%;
+            height: 400px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>חידודי מדע</h1>
-        <img src="https://github.com/RAVITAVI/MADA/blob/main/%D7%97%D7%99%D7%93%D7%94%201.png?raw=true" alt="חידה">
+        <h1>חידו.דוט</h1>
+        <img src="https://github.com/RAVITAVI/PicPuzz1/blob/PICP1/%D7%97%D7%99%D7%93%D7%94%201.png?raw=true" alt="חידה">
         <div class="input-container">
             <input type="text" maxlength="6" placeholder="6 תווים">
             <input type="text" maxlength="4" placeholder="4 תווים">
@@ -111,33 +130,34 @@
             const input1 = document.getElementsByTagName('input')[0].value;
             const input2 = document.getElementsByTagName('input')[1].value;
             const modal = document.getElementById("myModal");
+            const modalContent = modal.querySelector(".modal-content");
             const modalText = document.getElementById("modalText");
             const videoContainer = document.getElementById("videoContainer");
 
             if (input1.toLowerCase() === 'ניקולה' && input2.toLowerCase() === 'טסלה') {
                 modalText.innerHTML = "כל הכבוד! פתרת את החידה נכון.";
-                videoContainer.innerHTML = '<iframe width="560" height="315" src="https://www.youtube.com/embed/mCQZO7J8FaI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
+                videoContainer.innerHTML = '<iframe src="https://www.youtube.com/embed/mCQZO7J8FaI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
+                modalContent.classList.add('youtube');
             } else if (input1.toLowerCase() === 'ניקולה' || input2.toLowerCase() === 'טסלה') {
                 modalText.innerHTML = "אתם כמעט שם...";
                 videoContainer.innerHTML = '';
+                modalContent.classList.remove('youtube');
             } else {
                 modalText.innerHTML = "נסו שנית";
                 videoContainer.innerHTML = '';
+                modalContent.classList.remove('youtube');
             }
             modal.style.display = "block";
         }
 
-        // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
 
-        // When the user clicks on <span> (x), close the modal
         span.onclick = function() {
             var modal = document.getElementById("myModal");
             modal.style.display = "none";
             document.getElementById("videoContainer").innerHTML = '';
         }
 
-        // When the user clicks anywhere outside of the modal, close it
         window.onclick = function(event) {
             var modal = document.getElementById("myModal");
             if (event.target == modal) {
