--- a/PicPuzz1.html
+++ b/PicPuzz1.html
@@ -136,177 +136,7 @@
 
             if (input1.toLowerCase() === 'ניקולה' && input2.toLowerCase() === 'טסלה') {
                 modalText.innerHTML = "כל הכבוד! פתרת את החידה נכון.";
-                videoContainer.innerHTML = '<iframe src="<!DOCTYPE html>
-<html lang="he" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>חידו.דוט</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            text-align: center;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        .input-container {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        input {
-            font-size: 18px;
-            padding: 5px;
-            margin: 0 5px;
-            width: 80px;
-            text-align: center;
-        }
-        button {
-            font-size: 18px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.4);
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-            width: 400px;
-            max-width: 90%;
-            text-align: center;
-        }
-        .modal-content.youtube {
-            width: 600px;
-            max-width: 90%;
-			margin-top: 3%;
-        }
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        #modalText {
-            font-size: 24px;
-            font-weight: bold;
-            color: red;
-            margin-bottom: 20px;
-        }
-        #videoContainer iframe {
-            width: 100%;
-            height: 400px;
-            border-radius: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>חידו.דוט</h1>
-        <img src="https://github.com/RAVITAVI/PicPuzz1/blob/PICP1/%D7%97%D7%99%D7%93%D7%94%201.png?raw=true" alt="חידה">
-        <div class="input-container">
-            <input type="text" maxlength="6" placeholder="6 תווים">
-            <input type="text" maxlength="4" placeholder="4 תווים">
-        </div>
-        <button onclick="checkSolution()">פתרון</button>
-    </div>
-
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p id="modalText"></p>
-            <div id="videoContainer"></div>
-        </div>
-    </div>
-
-    <script>
-        function checkSolution() {
-            const input1 = document.getElementsByTagName('input')[0].value;
-            const input2 = document.getElementsByTagName('input')[1].value;
-            const modal = document.getElementById("myModal");
-            const modalContent = modal.querySelector(".modal-content");
-            const modalText = document.getElementById("modalText");
-            const videoContainer = document.getElementById("videoContainer");
-
-            if (input1.toLowerCase() === 'ניקולה' && input2.toLowerCase() === 'טסלה') {
-                modalText.innerHTML = "כל הכבוד! פתרת את החידה נכון.";
-                videoContainer.innerHTML = '<iframe src="https://youtu.be/G3OZsI02v5Q?si=zEGsPrOiQGzc0mxx" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
-                modalContent.classList.add('youtube');
-            } else if (input1.toLowerCase() === 'ניקולה' || input2.toLowerCase() === 'טסלה') {
-                modalText.innerHTML = "אתם כמעט שם...";
-                videoContainer.innerHTML = '';
-                modalContent.classList.remove('youtube');
-            } else {
-                modalText.innerHTML = "נסו שנית";
-                videoContainer.innerHTML = '';
-                modalContent.classList.remove('youtube');
-            }
-            modal.style.display = "block";
-        }
-
-        var span = document.getElementsByClassName("close")[0];
-
-        span.onclick = function() {
-            var modal = document.getElementById("myModal");
-            modal.style.display = "none";
-            document.getElementById("videoContainer").innerHTML = '';
-        }
-
-        window.onclick = function(event) {
-            var modal = document.getElementById("myModal");
-            if (event.target == modal) {
-                modal.style.display = "none";
-                document.getElementById("videoContainer").innerHTML = '';
-            }
-        }
-    </script>
-</body>
-</html>
-" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
+                videoContainer.innerHTML = '<iframe width="560" height="315" src="https://www.youtube.com/embed/jMesqilVGtw?si=nNy58r6KwpKa_tJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>';
                 modalContent.classList.add('youtube');
             } else if (input1.toLowerCase() === 'ניקולה' || input2.toLowerCase() === 'טסלה') {
                 modalText.innerHTML = "אתם כמעט שם...";
